# tmux-flash

./: CLAUDE.md  README.md  pyproject.toml  tmux-flash.tmux
docs/superpowers/plans/: 2026-04-30-flash-highlight-colors.md  2026-04-30-tmux-flash.md  2026-05-01-search-bar-overlay.md
docs/superpowers/specs/: 2026-04-30-flash-highlight-colors-design.md  2026-04-30-tmux-flash-design.md  2026-05-01-search-bar-overlay-design.md
src/: config.py  cursor_jump.py  debug_logger.py  pane_capture.py  popup_ui.py  search_interface.py  utils.py
tests/: test_config.py  test_cursor_jump.py  test_idle_timeout.py  test_label_placement.py  test_pane_capture.py  test_popup_ui.py  test_search_interface.py  test_utils.py
